--- a/index.html
+++ b/index.html
@@ -2,115 +2,11 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>JS Calculator</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- <link rel="stylesheet" href="style.css"> -->
-    <!-- Bootstrap CSS -->
-    <style>
-        @import url("https://fonts.googleapis.com/css?family=Poppins:300,500&display=swap");
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-
-        }
-
-        ::selection {
-            background: none;
-        }
-
-        body {
-            background-color: #3fa9fc;
-        }
-
-        #app {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            width: 100vw;
-        }
-
-        button {
-            border-color: #3fa9fc;
-            font-size: 20px;
-        }
-
-        .calculator {
-            display: grid;
-            grid-template-rows: repeat(3, minmax(60px, auto));
-            grid-template-columns: repeat(4, 60px);
-            grid-gap: 12px;
-            padding: 35px;
-            font-family: "Poppins";
-            font-weight: 300;
-            font-size: 20px;
-            background-color: #ffffff;
-            border-radius: 10px;
-            box-shadow: 0px 3px 80px -30px rgba(13, 81, 134, 1);
-        }
-
-        .calculator .calculator_keys {
-            display: grid;
-            grid-template-rows: repeat(4, minmax(60px, auto));
-            grid-template-columns: repeat(4, 60px);
-            grid-gap: 12px;
-            font-family: "Poppins";
-            font-weight: 300;
-            font-size: 20px;
-            background-color: #ffffff;
-            border-radius: 10px;
-        }
-
-        .btn,
-        .zero {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            text-align: center;
-            text-decoration: none;
-            outline: none;
-            color: #484848;
-            background-color: #f4faff;
-            border-radius: 5px;
-        }
-
-        .display,
-        .answer {
-            grid-column: 1 / 5;
-            display: flex;
-            align-items: center;
-        }
-
-        .display {
-            color: #a3a3a3;
-            border-bottom: 1px solid #e1e1e1;
-            margin-bottom: 15px;
-            overflow: hidden;
-            text-overflow: clip;
-        }
-
-        .answer {
-            font-weight: 500;
-            color: #146080;
-            font-size: 55px;
-            height: 65px;
-        }
-
-        .zero {
-            grid-column: 1 / 3;
-        }
-
-        .operator {
-            background-color: #d9efff;
-            color: #3fa9fc;
-        }
-    </style>
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -156,7 +52,7 @@
             } else if (operator === 'times') {
                 return Math.floor(firstNum * secondNum)
             } else if (operator === 'divide') {
-                if(secondNum === 0) return clear();
+                if (secondNum === 0) {return clear();}
                 return Math.floor(firstNum / secondNum)
             }
         }
@@ -205,7 +101,7 @@
                     : displayedNum
             }
 
-            if (keyType === 'clear') return 0
+            if (keyType === 'clear') return 
 
             if (keyType === 'solve') {
                 return firstValue
@@ -249,10 +145,10 @@
         }
 
         const clear = () => {
-          calculator.dataset.firstValue = ''
-          calculator.dataset.modValue = ''
-          calculator.dataset.operator = ''
-          calculator.dataset.previousKeyType = ''
+            calculator.dataset.firstValue = ''
+            calculator.dataset.modValue = ''
+            calculator.dataset.operator = ''
+            calculator.dataset.previousKeyType = ''
         }
 
         const updateVisualState = (key, calculator) => {
@@ -280,10 +176,10 @@
 
             console.log(getKeyType(e.target));
 
-            if(getKeyType(e.target) == "operator"){
-              let operatorType = getOperatorType(e.target);
-              if(display.innerText == "" && operatorType !== "minus") return
-              display.innerText = resultString + e.target.textContent
+            if (getKeyType(e.target) == "operator") {
+                let operatorType = getOperatorType(e.target);
+                if (display.innerText == "" && operatorType !== "minus") return
+                display.innerText = resultString + e.target.textContent
             }
             else display.textContent = resultString
             // console.log(resultString + e.target.textContent);
